--- a/test/LakeCondolence_Watch.html
+++ b/test/LakeCondolence_Watch.html
@@ -918,13 +918,11 @@ macros.cyclinglink = {
 Template.add(&#39;pirate&#39;, function () {
   return &quot;Hello, me hardy!&quot;;
 });
-&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="序章" tags="" position="225,225" size="100,100">&lt;div id=&quot;dlg&quot;&gt;&lt;p id=&quot;dlgp&quot;&gt;&lt;&lt;include &quot;序章-初始&quot;&gt;&gt;&lt;/p&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="序章-初始" tags="" position="350,225" size="100,100">?Shivers 你的汗毛在颤抖。昨晚那场雨让今
-
-在流逝的时间当中它随着寒风时左时右，把你昨天靠着丁点糠咽菜才攒下来的热量输送给喧腾的前门大街。
+&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="序章" tags="" position="225,225" size="100,100">&lt;div id=&quot;dlg&quot;&gt;&lt;p id=&quot;dlgp&quot;&gt;&lt;&lt;include &quot;序章-初始&quot;&gt;&gt;&lt;/p&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="序章-初始" tags="" position="350,225" size="100,100">?Shivers 一天开始了。你正坐在前门楼子大街前的老裕泰茶馆旁，呆滞地瞧着路上的青石砖逐渐露出干燥的颜色。你在的汗毛因寒冷而竖立，你身边的积水坑正夺取着你靠丁点咸菜才攒下来的热量，。
 &lt;&lt;dlg &quot;是吗？你怎么知道这是*秋天*，而不是冬天，春天、夏天，乃或者三九天？&quot; &quot;S000-1&quot;&gt;&gt;
 &lt;&lt;dlg &quot;那么秋天是如何产生的？&quot; &quot;000-2&quot;&gt;&gt;
 
-/* #region Branch1.对秋天的否定 */</tw-passagedata><tw-passagedata pid="14" name="000-1" tags="" position="475,225" size="100,100">?Censorship 人类不像动物一样拥有并相信自己的直觉。或者说他们曾经拥有，但是在进化的过程中失去了这种能力。在农耕文明的驯化之下，他们更相信与智慧和规律相关联的事物。诸如仪式、尺度、符号……虽然离开这些东西以后仍能感受寒冷和时间流逝，但他们却缺少自信，需要用抬杠的仪式为自己找回尊严。
+/* #region Branch1.对秋天的否定 */</tw-passagedata><tw-passagedata pid="14" name="S000-1" tags="" position="475,225" size="100,100">?Censorship 人类不像动物一样拥有并相信自己的直觉。或者说他们曾经拥有，但是在进化的过程中失去了这种能力。在农耕文明的驯化之下，他们更相信与智慧和规律相关联的事物。诸如仪式、尺度、符号……虽然离开这些东西以后仍能感受寒冷和时间流逝，但他们却缺少自信，需要用抬杠的仪式为自己找回尊严。
 
 
 你早上踩到了一片西瓜皮上，它有可能会是秋天的象征吗？
